# git-local-review

./: .gitignore  AGENT.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  KEYBINDINGS.md  README.md  ROADMAP.md  cli_help.txt  lefthook.yml  schema.sql  tarpaulin.toml
.sqlx/: query-05353acfe81e6b177bc33cda4cc059e2896a4d1ff2637a1162036fa58a6db8bc.json  query-170da6e667f87ca532e6acfc9abf51845da69dadb3328bca4b83877607ed3537.json  query-1ab61c172cc87d39cb55da1b705be64210f8f855fb2d52f3164a1b5a5b757103.json  query-1b0eeb935dad42f176bafed8e3e673aae4eeed233febddb984bcd7a598526ca5.json  query-24b9bbc14ba63dc7b9235912c66794dd5d30cdb8b148efb52f15b5ad407adb2a.json  query-2e921d5dff390e6161d3c875bd499e8d5a2083d10383e76b5b074528ca332079.json  query-31f4999f30748c1d85e33f77da6885c77d24f719793247423ce193001ecdd890.json  query-327b98c56b0b0223d7272d55c4123c1c2965d2bdcc75db4ace3a35a8ed0520fb.json  query-346208a4c22bbc6c0d3b4b4ba1a89f861c45de590f4392bdd264181587ccdea7.json  query-406c7b04ef0b4ad1d619e30d1bfcbe3def054868158ad6aa817e93252134ee06.json  query-45a38739f16c01b7dac160abd9374c24789eb77be17aaf2dc752b01c9ae66c10.json  query-495b54034aa5dba799803e28d269f8e55bedff0ad7af5f0aaf34837576601df7.json  query-4eba9a3c99a6cbf223dbb99c9c1777de74f78e683f58b77e6fa1cac0ef3580a5.json  query-5935f096f0b6e7622b7e0df9f32ce1dd49246c45feb1d1cad06a7928ea733c92.json  query-5e4158920a1386758efaaf8d4e7bcf594c28493b2c5cf7d8f933d3fa8aba60ee.json  query-616b3bca057c34f3814feb9880c79712bdf644defd9b6a95c03bd584f29ee1bd.json  query-629dbe26f54d22c8e7e9814c0563a8448515dc6dc5f0025658091a83f848c049.json  query-67dbc3c35f9c2e5f99cbae626655d470963e77b374a29e96faee0014a1135f16.json  query-69a61f53bc2b282dbfae4fb004ba64b49593fd205f763ab71917038df41c4eee.json  query-6d8bbeb17634b2c12d1671ad2ed6eceb1bccfa4306a1dc743103ce4e9d38a68c.json  query-6d9bb06f3be3f411ec51decdc3ce74c6a588314a52f3ff743d0073de0dbbc8ce.json  query-71addcf28b1f9108a3bdf5df5602a2940d0cb04832a68ca3ea55f44bfabeee3c.json  query-78d6470bfaa573b9f81d82b3c96633f52896ebf374df43cb8a93064d60f2e4c2.json  query-8580cc68a6b46a5bae36594aa35b37b6d1986e8ff644342c7f7a648f2ecec3ea.json  query-8a2f0fb59cb94d54860c6b5134bb8f57c34d872dd170ab8ae0aaa69da618a50c.json  query-8c60c0817802f2f868cbf23f8067de2f49b107499b42f58b08fb1fb2d6d75bd1.json  query-910cc82fa757de34655fe00d249deed292c56838bb7a30f81f94f4b1c2e072dc.json  query-997e8212eba29845b8994fbe8f3575f5518a4092e5a80294e5e63eac001d834b.json  (+10 more)
src/: app.rs  database.rs  ui.rs  (+7 more)
(+70 files in other folders)
