[package]
name = "git-local-review"
version = "0.1.0"
description = "A Terminal User Interface (TUI) for reviewing Git changes with local SQLite state storage."
authors = ["Peter Morgenstern <mail@petergundel.de>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
tui-logger = "0.17.3"
log = "0.4.27"
