[package]
name = "git-local-review"
version = "0.1.1"
authors = ["Peter Morgenstern <mail@petergundel.de>"]
edition = "2024"
homepage = "https://github.com/peterfication/git-local-review"
license = "MIT"
readme = "README.md"
repository = "https://github.com/peterfication/git-local-review"
description = "A Terminal User Interface (TUI) for reviewing Git changes with local SQLite state storage."

exclude = [
  ".github",
  "AGENT.md",
  "lefthook.yml",
  "dprint.json",
  "assets/screenshot.png",
  "src/**/*.snap",
]

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
git2 = "0.20.2"
log = "0.4.27"
ratatui = "0.29.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tokio = { version = "1.47.1", features = ["full"] }
tui-logger = "0.17.3"
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
# cargo-tarpaulin = "0.32.8"
insta = "1.43.2"
tempfile = "3.8.1"
